<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Crowd</string>
    <string name="action_settings">Settings</string>

    <!-- MainScreenActivity -->
    <string name="signin">Sign In</string>
    <string name="signup_btn">Signup</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="mainscreen_bg_description">Main screen background image</string>
    <string name="user_successfully_sign_in">User has successfully signed in!</string>

    <!-- SignupActivity -->

    <string name="action_signup">Sign up</string>
    <string name="please_wait">Please wait...</string>

    <!-- Activities titles -->
    <string name="title_activity_events_list">Events</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_home">SocialCrowd</string>
    <string name="title_activity_back">back</string>
    <string name="title_activity_refresh">refresh</string>
    <string name="title_activity_delete">delete</string>
    <string name="title_activity_location">Search for Location</string>

    <!-- Others -->
    <string name="addNewEvent">Add Event</string>
    <string name="listEvents">List Events</string>
    <string name="mySubscriptions">My Subscriptions</string>
    <string name="myEvents">My Events</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="description_logo">Our awesome app</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="rate_event">Rate this event</string>
    <string name="ok_button_text">Ok</string>
    <string name="cancel_button_text">Cancel</string>

</resources>