<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/mainscreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/mainscreen_bg_description"
        android:longClickable="true"
        android:scaleType="fitXY"
        android:src="@drawable/mainscreen"
        android:visibility="visible" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="onClickBtn"
        android:text="@string/signup_btn"
        android:textColor="#fff"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/signin_password"
        style="@style/mainscreen_edittext"
        android:layout_y="251dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/signin_username"
        style="@style/mainscreen_edittext"
        android:layout_y="199dp"
        android:hint="@string/username"
        android:inputType="text"
        android:visibility="invisible" />

    <Button
        android:id="@+id/signin_btn"
        style="@style/large_btn"
        android:layout_y="303dp"
        android:onClick="onClickBtn"
        android:text="@string/signin"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_x="132dp"
        android:layout_y="340dp" />

</AbsoluteLayout>