<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity" >

    <ImageView
        android:id="@+id/mainscreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/mainscreen_bg_description"
        android:longClickable="true"
        android:scaleType="fitXY"
        android:src="@drawable/mainscreen"
        android:visibility="visible" />

    <EditText
        android:id="@+id/signup_username"
        style="@style/mainscreen_edittext"
        android:layout_y="199dp"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/signup_password"
        style="@style/mainscreen_edittext"
        android:layout_y="251dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_btn"
        style="@style/large_btn"
        android:layout_y="303dp"
        android:onClick="onClickBtn"
        android:text="@string/action_signup" />

</AbsoluteLayout>