<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_activity_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_activity_refresh"
            android:onClick="onClickRefresh"
            android:src="@drawable/title_refresh" />
        
        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_activity_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_activity_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>
    
    <ListView
        android:id="@+id/eventsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
    </ListView>

</LinearLayout>