<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity" >
    
    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_activity_home"
            android:onClick="onClickHome"
            android:src="@drawable/title_home" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_activity_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/title_activity_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey" >

        <TextView
            android:id="@+id/search_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/search_name_input_field"
            android:layout_alignParentTop="true"
            android:layout_marginTop="24dp"
            android:text="Name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/search_name_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_name_label"
            android:layout_centerHorizontal="true"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/search_category_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/search_category_label"
            android:layout_below="@+id/search_category_label"
            android:ems="10" />

        <TextView
            android:id="@+id/search_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/search_name_input_field"
            android:layout_below="@+id/search_name_input_field"
            android:layout_marginTop="16dp"
            android:text="Category"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/search_tags_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/search_category_input_field"
            android:layout_below="@+id/search_category_input_field"
            android:layout_marginTop="14dp"
            android:text="Tags"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/search_tags_input_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/search_tags_label"
            android:layout_below="@+id/search_tags_label"
            android:ems="10" />

        <ImageButton
            style="@style/TitleBarLogo"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_tags_input_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp"
            android:background="@null"
            android:onClick="onClickSearch"
            android:src="@drawable/search_btn" />

    </RelativeLayout>
    
  

</LinearLayout>